--- a/Proyecto-canal-main/demo/pom.xml
+++ b/Proyecto-canal-main/demo/pom.xml
@@ -20,7 +20,7 @@
     </parent>
 
     <properties>
-        <java.version>17</java.version> <!-- o 21, si tu JDK lo permite -->
+        <java.version>21</java.version>
     </properties>
 
     <dependencies>
