--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=canal
-spring.datasource.url=jdbc:mysql://localhost:3306/canal_drenaje
+spring.datasource.url=jdbc:mysql://root:vXVeBGtikLUZyYCOiTTFuIXGEoUZDahW@mysql.railway.internal:3306/railway
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=2003
+spring.datasource.password=vXVeBGtikLUZyYCOiTTFuIXGEoUZDahW
 spring.jpa.hibernate.ddl-auto=update
